--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,29 +2,26 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [main]
   pull_request:
-    branches: [ master ]
+    branches: [main]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: docker login
-      env:
-        DOCKER_USER: ${{secrets.DOCKERHUB_USER}}
-        DOCKER_PASS: ${{secrets.DOCKERHUB_PASS}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASS
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag marangog3/express-radomquotes:latest
-      
-    - name: Docker Push
-      run: docker push marangog3/express-radomquotes
-
-
+      - uses: actions/checkout@v4
+      - name: docker login
+        env:
+          DOCKER_USER: ${{ secrets.DOCKERHUB_USER }}
+          DOCKER_PASS: ${{ secrets.DOCKERHUB_PASS }}
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASS
+  
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile --tag marangog3/express-radomquotes:latest
+  
+      - name: Docker Push
+        run: docker push marangog3/express-radomquotes
 
